Revert "Fix for shifted expanders"
This reverts commit 03d17787d94a17133f41f73b7feba49883855241.

--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ input:active {
     animation: slide-up 0.4s;
     z-index: 0;
     position: relative;
+    overflow-y: hidden;
 }
 
 .api-selection {
